[package]
name = "sudoku-type-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sudoku_stable"
path = "src/sudoku_stable.rs"

[[bin]]
name = "sudoku_generic_const_exprs"
path = "src/sudoku_specialization.rs"

[[bin]]
name = "sudoku_const_params_for"
path = "src/sudoku_const_params_for.rs"

[[bin]]
name = "sudoku_const_params"
path = "src/sudoku_generic_const_exprs.rs"